Commit before updating angular 12
